--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,14 @@ find_package(ICU COMPONENTS uc REQUIRED)
 find_package(X11 REQUIRED)
 
 include_directories(${X11_INCLUDE_DIR})
-include_directories(./include)
+include_directories(./includes)
+include_directories(./lib)
 add_executable(sysfex
   src/sysfex.cpp
   src/config.cpp
   src/utils.cpp
   src/info.cpp
   src/image.cpp
-  src/modules/colors.cpp
   src/modules/cpu.cpp
   src/modules/de.cpp
   src/modules/host.cpp
@@ -31,25 +31,24 @@ add_executable(sysfex
   src/modules/uptime.cpp
   src/modules/user.cpp
   src/shell_escape.cpp
-  include/shell_escape.hpp
-  include/modules.hpp
-  include/info.hpp
-  include/config.hpp
-  include/modules/colors.hpp
-  include/modules/cpu.hpp
-  include/modules/de.hpp
-  include/modules/host.hpp
-  include/modules/kernel.hpp
-  include/modules/model.hpp
-  include/modules/os.hpp
-  include/modules/pkgs.hpp
-  include/modules/ram.hpp
-  include/modules/resolution.hpp
-  include/modules/shell.hpp
-  include/modules/uptime.hpp
-  include/modules/user.hpp
-  include/utils.hpp
-  include/image.hpp
+  includes/shell_escape.hpp
+  includes/modules.hpp
+  includes/info.hpp
+  includes/config.hpp
+  includes/modules/cpu.hpp
+  includes/modules/de.hpp
+  includes/modules/host.hpp
+  includes/modules/kernel.hpp
+  includes/modules/model.hpp
+  includes/modules/os.hpp
+  includes/modules/pkgs.hpp
+  includes/modules/ram.hpp
+  includes/modules/resolution.hpp
+  includes/modules/shell.hpp
+  includes/modules/uptime.hpp
+  includes/modules/user.hpp
+  includes/utils.hpp
+  includes/image.hpp
 )
 
 target_link_libraries(sysfex ${X11_LIBRARIES} ICU::uc)
