--- a/examples/catto/config
+++ b/examples/catto/config
@@ -5,17 +5,16 @@ gap = 5
 
 # Path to ASCII
 # This path may point to an image as well
-# `viu` is required for this feature to work
-# Supported formats: '.png', '.jpg', '.jpeg', '.bmp', '.webp'
-ascii = /home/mehedi/Downloads/linux.png
+# `viu` is required for image to work
+ascii = <YOUR_ASCII_HERE>
 
 # For if ASCII is image
 # The number of cells occupied by the image in X axis
-image_width = 36
+image_width = 24
 
-# Print text beside ASCII
+# Print information beside ASCII
 # If disabled, information will be printed below the ASCII
-info_beside_ascii = 1
+info_beside_ascii = 0
 
-# Clear screen before executing Sysfex
+# Clear terminal window before executing Sysfex
 clear_screen = 0
